--- a/requirements.txt
+++ b/requirements.txt
@@ -16,10 +16,12 @@ cssselect==1.0.3
 cycler==0.10.0
 Cython==0.29.13
 decorator==4.4.1
+defusedxml==0.6.0
 dicom==0.9.9.post1
 dill==0.2.9
 docopt==0.6.2
 ecos==2.0.7.post1
+et-xmlfile==1.0.1
 etelemetry==0.1.2
 filelock==3.0.12
 Flask==1.0.2
@@ -40,16 +42,18 @@ incremental==17.5.0
 indexed-gzip==0.8.10
 isodate==0.6.0
 itsdangerous==1.1.0
+jdcal==1.4.1
 Jinja2==2.10.1
 Keras==2.2.4
 Keras-Applications==1.0.7
 Keras-Preprocessing==1.0.9
-
+keras-resnet3d==0.0.1
 kiwisolver==1.0.1
 knnimpute==0.1.0
 lockfile==0.12.2
 lxml==4.3.4
 Markdown==3.0.1
+MarkupPy==1.14
 MarkupSafe==1.1.1
 matplotlib==3.0.3
 med2image==1.1.2
@@ -68,7 +72,9 @@ nitime==0.8.1
 niworkflows==0.10.4
 num2words==0.5.10
 numpy==1.16.2
+odfpy==1.4.0
 opencv-python==4.0.0.21
+openpyxl==3.0.0
 osqp==0.5.0
 packaging==19.2
 pandas==0.24.2
@@ -112,6 +118,7 @@ SQLAlchemy==1.3.10
 statsmodels==0.9.0
 svgutils==0.3.1
 sympy==1.4
+tablib==0.14.0
 tedana==0.0.7
 templateflow==0.4.1
 tensorboard==1.13.1
@@ -126,4 +133,6 @@ urllib3==1.25.6
 versioneer==0.18
 w3lib==1.20.0
 Werkzeug==0.15.0
+xlrd==1.2.0
+xlwt==1.3.0
 zope.interface==4.6.0
