--- a/requirements.txt
+++ b/requirements.txt
@@ -45,6 +45,8 @@ itsdangerous==1.1.0
 jdcal==1.4.1
 Jinja2==2.10.1
 Keras==2.2.4
+numpy==1.16.2
+
 Keras-Applications==1.0.7
 Keras-Preprocessing==1.0.9
 kiwisolver==1.0.1
@@ -69,9 +71,7 @@ nipy==0.4.2
 nipype==1.2.3
 nitime==0.8.1
 niworkflows==0.10.4
-num2words==0.5.10
-numpy==1.16.2
-odfpy==1.4.0
+num2words==0.5.10odfpy==1.4.0
 opencv-python==4.0.0.21
 openpyxl==3.0.0
 osqp==0.5.0
