--- a/requirements.txt
+++ b/requirements.txt
@@ -70,7 +70,7 @@ nilearn==0.5.2
 
 nipype==1.2.3
 nitime==0.8.1
-niworkflows==0.10.4odfpy==1.4.0
+odfpy==1.4.0
 opencv-python==4.0.0.21
 openpyxl==3.0.0
 osqp==0.5.0
